--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "ng-lollipop": "^0.2.1"
   },
   "devDependencies": {
+    "cssnano": "^3.10.0",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-coffee": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "^2.1.0",
     "grunt-shell": "^2.1.0",
-    "node-spritesheet": "^0.4.2"
+    "node-spritesheet": "^0.4.2",
+    "postcss-preset-env": "^5.1.0",
+    "precss": "^3.1.2"
   },
   "scripts": {},
   "repository": {
