--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "doc": "docs"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.4.1",
     "font-awesome": "^4.7.0",
-    "ng-lollipop": "^0.5.0"
+    "ng-lollipop": "^0.5.1"
   },
   "devDependencies": {
+    "bootstrap": "^4.3.1",
     "cssnano": "^4.1.10",
     "grunt": "^1.0.4",
     "grunt-contrib-clean": "^2.0.0",
@@ -23,10 +23,10 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-postcss": "^0.9.0",
-    "grunt-sass": "^3.0.2",
+    "grunt-sass": "^3.1.0",
     "grunt-shell": "^3.0.1",
     "node-spritesheet": "^0.4.2",
-    "postcss-preset-env": "^6.6.0",
+    "postcss-preset-env": "^6.7.0",
     "precss": "^4.0.0"
   },
   "scripts": {},
