--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-postcss": "^0.9.0",
     "grunt-sass": "^3.1.0",
     "grunt-shell": "^3.0.1",
+    "node-sass": "^4.12.0",
     "node-spritesheet": "^0.4.2",
     "postcss-preset-env": "^6.7.0",
     "precss": "^4.0.0"
