wtf would THIS need lollipop?

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "doc": "docs"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0",
-    "ng-lollipop": "^0.5.1"
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "bootstrap": "^4.3.1",
