--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "monad-theme-default",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "description": "Default Monad theme (based on Bootstrap)",
   "files": [
-    "dist/**",
-    "dist/assets/**",
+    "dist/**/*",
     "assets/**",
     "sass/**"
   ],
