explicitly target this

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Default Monad theme (based on Bootstrap)",
   "files": [
     "dist/**/*",
+    "dist/assets/**/*",
     "assets/**",
     "sass/**"
   ],
